fix : remove warnings and reduce sonar lint problems