@@ -1,87 +1,96 @@
 package com.indivaragroup.jdt17wms.exceptions;
 
+import com.indivaragroup.jdt17wms.dto.utils.BusinessErrorResponseDTO;
+import com.indivaragroup.jdt17wms.dto.utils.ValidationErrorDetailDTO;
+import com.indivaragroup.jdt17wms.dto.utils.ValidationErrorResponseDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
 
 @RestControllerAdvice
 public class ExceptionHandlingAdvice {
 
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<Map<String, Object>> handleNotFoundException(NotFoundException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        errorResponse.put("code", HttpStatus.NOT_FOUND.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleNotFoundException(NotFoundException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error(ex.getMessage())
+                .code(HttpStatus.NOT_FOUND.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(BadRequestException.class)
-    public ResponseEntity<Map<String, Object>> handleBadRequestException(BadRequestException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", "Invalid JSON Body");
-        errorResponse.put("code", HttpStatus.BAD_REQUEST.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleBadRequestException(BadRequestException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error("Invalid JSON Body")
+                .code(HttpStatus.BAD_REQUEST.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(MissingRiskProfileException.class)
-    public ResponseEntity<Map<String, Object>> handleMissingRiskProfileException(MissingRiskProfileException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        errorResponse.put("code", HttpStatus.UNPROCESSABLE_ENTITY.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleMissingRiskProfileException(MissingRiskProfileException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error(ex.getMessage())
+                .code(HttpStatus.UNPROCESSABLE_ENTITY.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
     @ExceptionHandler(DelistedProductException.class)
-    public ResponseEntity<Map<String, Object>> handleDelistedProductException(DelistedProductException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        errorResponse.put("type", "ERR-004");
-        errorResponse.put("code", HttpStatus.UNPROCESSABLE_ENTITY.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleDelistedProductException(DelistedProductException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error(ex.getMessage())
+                .type("ERR-004")
+                .code(HttpStatus.UNPROCESSABLE_ENTITY.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
     @ExceptionHandler(DuplicatePriorityGoalException.class)
-    public ResponseEntity<Map<String, Object>> handleDuplicatePriorityGoalException(DuplicatePriorityGoalException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        errorResponse.put("type", "ERR-002");
-        errorResponse.put("code", HttpStatus.UNPROCESSABLE_ENTITY.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleDuplicatePriorityGoalException(DuplicatePriorityGoalException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error(ex.getMessage())
+                .type("ERR-002")
+                .code(HttpStatus.UNPROCESSABLE_ENTITY.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
     @ExceptionHandler(InsufficientIncomeException.class)
-    public ResponseEntity<Map<String, Object>> handleInsufficientIncomeException(InsufficientIncomeException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        errorResponse.put("type", "ERR-003");
-        errorResponse.put("code", HttpStatus.UNPROCESSABLE_ENTITY.value());
+    public ResponseEntity<BusinessErrorResponseDTO> handleInsufficientIncomeException(InsufficientIncomeException ex) {
+        BusinessErrorResponseDTO errorResponse = BusinessErrorResponseDTO.builder()
+                .error(ex.getMessage())
+                .type("ERR-003")
+                .code(HttpStatus.UNPROCESSABLE_ENTITY.value())
+                .build();
         return new ResponseEntity<>(errorResponse, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
-    @ExceptionHandler(org.springframework.web.bind.MethodArgumentNotValidException.class)
-    public ResponseEntity<Map<String, Object>> handleValidationException(org.springframework.web.bind.MethodArgumentNotValidException ex) {
-        Map<String, Object> errorResponse = new HashMap<>();
-        errorResponse.put("error", "Invalid field values");
-        errorResponse.put("type", "ERR-001");
-        errorResponse.put("code", HttpStatus.BAD_REQUEST.value());
-
-        java.util.List<Map<String, String>> details = ex.getBindingResult().getFieldErrors().stream()
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ValidationErrorResponseDTO> handleValidationException(MethodArgumentNotValidException ex) {
+        List<ValidationErrorDetailDTO> details = ex.getBindingResult().getFieldErrors().stream()
                 .map(fieldError -> {
-                    Map<String, String> detail = new HashMap<>();
                     String fieldName = fieldError.getField();
                     String snakeCaseField = fieldName.replaceAll("([a-z])([A-Z]+)", "$1_$2").toLowerCase();
-                    detail.put("field", snakeCaseField);
-                    detail.put("reason", fieldError.getDefaultMessage());
-                    return detail;
+                    return ValidationErrorDetailDTO.builder()
+                            .field(snakeCaseField)
+                            .reason(fieldError.getDefaultMessage())
+                            .build();
                 })
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
 
-        errorResponse.put("details", details);
+        ValidationErrorResponseDTO errorResponse = ValidationErrorResponseDTO.builder()
+                .error("Invalid field values")
+                .type("ERR-001")
+                .code(HttpStatus.BAD_REQUEST.value())
+                .details(details)
+                .build();
+
         return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
     }
 }
-
